Add insights.io page view tracking

--- a/layouts/partials/head/custom-head.html
+++ b/layouts/partials/head/custom-head.html
@@ -1,1 +1,6 @@
 <!-- Custom head -->
+<script src="https://getinsights.io/js/insights.js"></script>
+<script>
+insights.init('DqCfHWW_kH3MIiT4');
+insights.trackPages();
+</script>
