Add download tracking

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,9 +24,9 @@
       <div class="col-lg-5">
         <h2 class="h4">download</h2>
         <p class="text-left">
-            <a type="button" class="btn btn-outline-primary btn-sm" href="/dissertation.pdf" target="_blank">dissertation</a>
-            <a type="button" class="btn btn-outline-primary btn-sm" href="/booklet.pdf" target="_blank">thesis booklet</a>
-            <a type="button" class="btn btn-outline-primary btn-sm" href="/defense.pdf" target="_blank">defense presentation</a>
+            <a type="button" class="btn btn-outline-primary btn-sm" href="/dissertation.pdf" target="_blank" onclick="insights.track({id: 'download_dissertation'});">dissertation</a>
+            <a type="button" class="btn btn-outline-primary btn-sm" href="/booklet.pdf" target="_blank" onclick="insights.track({id: 'download_booklet'});">thesis booklet</a>
+            <a type="button" class="btn btn-outline-primary btn-sm" href="/defense.pdf" target="_blank" onclick="insights.track({id: 'download_presentation'});">defense presentation</a>
         </p>
       </div>
 <!--
